# forge

./: .cursorrules  .gitignore  AGENTS.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
.forge/: state.json
.github/: pull_request_template.md  settings.json
.github/workflows/: changelog-guard.yml  test.yml
docs/: 00-draft.md  00-draft1.md  01-plan.md  01-plans-pew-pew.md  01-plans.md  02-changelog.md  02-tasklist-parallel.md  02-tasks-pew-pew.md  02-tasks-spec-flow.md  02-tasks.md  03-afs.md  03-architecture.md  03-guide-local_development.md  04-changelog.md  04-rules.md  05-ideas.md  06-analysis.md  06-rules.md  07-errors.md  07-guides.md  08-audit-report.md  design-system.md  tree.md
docs/00-archive/: release_notes.md
docs/01-plans/: 01-plan.md  01-plans-spec-flow.md
docs/02-tasks/: active.md  tasklist-completed.md
docs/06-analysis/: 00-analysis-rules-integration.md  09-analysis-adherence.md  09-analysis-compatibility.md  09-analysis-project-development.md
docs/_archive/: 00-context-project_overview.md  01-plans-assessment.md  04-reference-agents.md  04-reference-constitution.md  alem de test, spec, feature, domain driven develop.md
docs/guides/: 03-guide-installation.md  03-guide-local_development.md  03-guide-quickstart.md
scripts/bash/: check-prerequisites.sh  common.sh  setup-plan.sh  (+2 more)
templates/: checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
tests/: test_audit.py  test_cli.py  test_compiler.py  test_integration_local.py  test_plugins.py  test_rules.py  test_state.py  test_utils.py  test_workflow.py
(+80 files in other folders)
