[project]
name = "forge"
version = "0.1.0"
description = "Forge Kit - AI-Driven Multi-Agent Development Framework. Forked from GitHub Spec Kit with enhanced multi-agent capabilities, RPG, observability, and TEVV."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
forge = "forge:main"
specify = "forge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]
